--- a/XLShredSkinEditor/XLShredSkinEditor.csproj
+++ b/XLShredSkinEditor/XLShredSkinEditor.csproj
@@ -61,12 +61,17 @@
       <HintPath>B:\Programmes\Steam\steamapps\common\Skater XL\SkaterXL_Data\Managed\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="XLShredLib">
-      <HintPath>..\..\..\..\Desktop\XLShredLib.dll</HintPath>
+      <HintPath>C:\Users\Azahet\Desktop\XLShredLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Skin.cs" />
     <Compile Include="SkinEditor.cs" />
   </ItemGroup>
@@ -75,6 +80,12 @@
       <Project>{23461b59-cbb1-4b0c-a0f5-d4d151084ca8}</Project>
       <Name>SkaterXlMODSDEBUG</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
